@@ -1,3 +1,7 @@
+2002-11-12  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* main.c (set_white_bg): Don't leak the style.
+	
 2002-11-09  Fatih Demir <kabalak@gtranslator.org>
 
 	* configure.in: Added "ta" (Tamil) language to the languages' list.
